# haskbase

./: README.md  cabal.project  haskbase.cabal  strip.cabal
app/: Main.hs
