cabal-version: 2.4

name:           strip
version:        0.0.0
author:         Łukasz Hen <put@email.here>
maintainer:     Łukasz Hen <put@email.here>
copyright:      (c) 2022 Łukasz Hen
license:        MIT
license-file:   LICENSE
build-type:     Simple

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base ==4.*
  exposed-modules:
      Data.String.Strip
  other-modules:
      Paths_strip
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , strip
  other-modules:
      Data.String.StripSpec
      Paths_strip
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*

executable strip
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ==4.*, hspec, hspec-contrib, QuickCheck, HUnit, strip
    hs-source-dirs:   app
    default-language: Haskell2010